docs: 修改 README.md - 补充JVM控制参数描述2