@@ -23,6 +23,7 @@
 > 例子：-XX:+PrintGCDetails，-XX:-UseParallelGC，-XX:+PrintGCTimeStamps……
 
 #### 标准参数（-）
+
 | 参数 | 描述 |
 | ---- | ---- |
 | -server | 指定 JVM 类型为 server 类型 |
@@ -31,10 +32,11 @@
 | -version | 输出产品版本并退出 |
 
 #### 非标准参数（-X）
+
 | 参数 | 描述 |
 | ---- | ---- |
 | -Xnoclassgc | 禁用类垃圾收集 |
-| -Xloggc:<file> | 将 GC 状态记录在文件中（带时间戳） |
+| -Xloggc:\<file\> | 将 GC 状态记录在文件中（带时间戳） |
 | -XshowSettings | 显示所有设置并继续 |
 | -XshowSettings:all | 显示所有设置并继续 |
 | -XshowSettings:vm | 显示所有与 vm 相关的设置并继续 |
@@ -59,7 +61,43 @@
 | -XX:MinHeapFreeRatio |  | `-XX:MinHeapFreeRatio=40` | 空闲堆内存最小百分比，小于该值则进行扩容，默认是40 |
 | -XX:MaxHeapFreeRatio |  | `-XX:MaxHeapFreeRatio=70` | 空闲堆内存最大百分比，大于该值则进行缩容，默认值是70 |
 
+#### 指定使用的垃圾回收器
+
+| 参数 | 描述 |
+| ---- | ---- |
+| -XX:+UseSerialGC | 使用 Serial 垃圾回收器 |
+| -XX:+UseParNewGC | 使用 ParNew 垃圾回收器 |
+| -XX:+UseConcMarkSweepGC | 使用 CMS 垃圾回收器 |
+| -XX:+UseParallelGC | 使用 Parallel Scavenge 垃圾回收器 |
+| -XX:+UseParallelOldGC | 使用 Parallel Old 垃圾回收器 |
+| -XX:+UseG1GC | 使用 G1 垃圾回收器 |
+
+#### GC 日志
+
+| 参数 | 描述 |
+| ---- | ---- |
+| -XX:+PrintGC | 打印 GC 日志 |
+| -XX:+PrintGCDetails | 打印 GC 详情 |
+| -XX:+PrintGCDateStamps | 打印 GC 时间戳 |
+| -XX:+PrintGCTimeStamps | 打印 GC 时间戳 |
+| -Xloggc:filename | 将 GC 状态记录在文件中（带时间戳） |
+| -XX:+UseGCLogFileRotation | 滚动式存储 GC 日志 |
+| -XX:NumberOfGClogFiles=\<number of files\> | GC 日志文件最大数 |
+| -XX:GCLogFileSize=\<number\>M (or K) | 单个 GC 日志文件最大大小 |
+
+#### 其他日志
+
+| 参数 | 描述 |
+| ---- | ---- |
+| -XX:ErrorFile=./hs_err_pid\<pid\>.log | JVM Error 日志文件 |
+| -XX:HeapDumpPath=./java_pid\<pid\>.hprof | 内存 dump 文件 |
+| -XX:+HeapDumpOnOutOfMemoryError | 发生内存溢出时，dump 内存 |
+| -XX:+TraceClassLoading | 输出 class 加载情况 |
+| -XX:+TraceClassUnloading | 输出 class 卸载情况 |
+| -XX:-TraceLoaderConstraints | 输出常量加载情况 |
+
 ## 参考文章
-> [Learn JVM Tutorial – Architecture & Working of Java Virtual Machine](https://data-flair.training/blogs/java-virtual-machine-jvm/)
-> [JVM (Java Virtual Machine) Architecture](https://www.javatpoint.com/jvm-java-virtual-machine)
-> [轻松永远记住经典jvm参数](https://zhuanlan.zhihu.com/p/127352212)
+
+- [Learn JVM Tutorial – Architecture & Working of Java Virtual Machine](https://data-flair.training/blogs/java-virtual-machine-jvm/)
+- [JVM (Java Virtual Machine) Architecture](https://www.javatpoint.com/jvm-java-virtual-machine)
+- [轻松永远记住经典jvm参数](https://zhuanlan.zhihu.com/p/127352212)
